testdata/step_22/valid/init.c
int a = 9;

int main() {
    return a;
}