testdata/step_22/parse_err/undeclared.c
int a;

int main() {
    b = 1;
    return 0;
}